--- a/config.example.json
+++ b/config.example.json
@@ -1,5 +1,5 @@
 {
     "connections": [
-        {"host": "127.0.0.1", "dbname": "test", "user": "postgres", "password": "<password>"}
+        {"host": "127.0.0.1", "port": "5432", "dbname": "test", "user": "postgres", "password": "<password>"}
     ]
 }
